add finished project

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">Wallpaper App</string>
     <string name="set_wallpaper">Set Wallpaper</string>
     <string name="download">Download</string>
+    <string name="open">open</string>
+    <string name="close">close</string>
     <string name="share">share</string>
     <string name="Share">Share</string>
     <string name="share_image">Share Image</string>
@@ -10,4 +12,8 @@
     <string name="share_the_app">Share the App</string>
     <string name="about_us">About Us</string>
     <string name="privacyPolicy">Privacy Policy</string>
+    <string name="bookmark">Bookmarks</string>
+    <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>
+    <string name="Banner">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="inters">ca-app-pub-3940256099942544/1033173712</string>
 </resources>
